--- a/sites/all/modules/betterlogin/css/betterlogin.css
+++ b/sites/all/modules/betterlogin/css/betterlogin.css
@@ -1,3 +1,8 @@
+.howdyasay{
+  color: blue;
+  text-shadow: 2px 2px orange;
+  text-align: center;
+}
 #auth_box {
   width: 300px;
   margin: 0 auto;
@@ -10,17 +15,17 @@
     margin: 0;
     padding: 0 0 25px;
   }
-    
+
     #auth_box h1#the_logo img {
       max-width: 250px;
     }
-  
+
   #auth_box h2.title {
     margin: 0;
     padding: 0 0 15px;
     font-size: 2em;
   }
-  
+
   #auth_box input[type="text"],
   #auth_box input[type="password"] {
     width: 260px;
